fixed alignment and border code for playlists in blog1. adjusted font sizes for responsive media break points in blog1

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -468,8 +468,8 @@ footer {
 
 /* This is the generic styling for the child blog pages */
 .blog {
-  margin: 1rem;
-  padding: 1rem;
+  margin: 0.2rem;
+  padding: 0.2rem;
   display: flex;
   justify-content: center;
 }
@@ -482,7 +482,7 @@ footer {
 .blog-title {
   text-align: center;
   font-family: 'Esteban', Garamond, serif;
-  font-size: 20px;
+  font-size: 24px;
 }
 
 .blog-date {
@@ -516,27 +516,42 @@ footer {
 }
 
 /* This is the stying for blog1.html */
-.blog-1-img {
-  max-width: 60%;
-  min-width: 300px;
-}
-
 .blog-1-article {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  font-size: 18px;
 }
 
 .blog-1-para-1 {
   margin-right: 0.8rem;
   margin-left: 0.8rem;
+  font-size: 18px;
 }
 
 .blog-1-para-2 {
   margin-right: 0.8rem;
   margin-left: 0.8rem;
+  font-size: 18px;
+}
+
+/* This is the styling for the playlists */
+.playlist-1 {
+  align-self: center;
+  margin: 18px 0;
+}
+
+.playlist-1 iframe{
+  border: 0
+}
+
+.playlist-2 {
+  align-self: center;
+  margin: 18px 0;
+}
+
+.playlist-2 iframe{
+  border: 0;
 }
 
 /* This is the stying for blog5.html */
@@ -948,7 +963,7 @@ footer {
 
   /* This is the generic styling for the child blog pages */
   .blog-title {
-    font-size: 36px;
+    font-size: 38px;
   }
 
   .blog-date {
@@ -966,6 +981,7 @@ footer {
     padding-left: 4rem;
     margin-right: 1.5rem;
     margin-left: 1.5rem;
+    font-size: 24px;
   }
 
   .blog-1-para-2 {
@@ -973,10 +989,7 @@ footer {
     padding-left: 4rem;
     margin-right: 1.5rem;
     margin-left: 1.5rem;
-  }
-
-  .blog-1-article {
-    font-size: 22px;
+    font-size: 24px;
   }
 
 /* This is the stying for blog5.html */
@@ -1244,6 +1257,7 @@ footer {
     padding-left: 3rem;
     margin-right: 1.5rem;
     margin-left: 1.5rem;
+    font-size: 20px;
   }
 
   .blog-1-para-2 {
@@ -1251,6 +1265,7 @@ footer {
     padding-left: 3rem;
     margin-right: 1.5rem;
     margin-left: 1.5rem;
+    font-size: 20px;
   }
 
   .blog-1-article {
